<resources>
    <string name="app_name">HADA</string>
    <string name="patient_login">Patient Login</string>
    <string name="doctor_login">Doctor Login</string>
    <string name="create_user">Create user</string>

    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="add_front_image">Add Front Image</string>
    <string name="add_back_image">Add Back Image</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="add_phonenumber_hint">Phone Number</string>
    <string name="add_email_hint">Email Address</string>
    <string name="search">Search</string>
    <string name="new_problem">New Problem</string>
    <string name="user_settings">User Settings</string>
    <string name="problem_title">PROBLEM NAME</string>
    <string name="ViewProblemImage">Location of problem on body.</string>
    <string name="ViewProblemMapButton">Image of a map.</string>
    <string name="ViewProblemSlideshowButton">Image of a play button.</string>
    <string name="PatientListTitle">PATIENTS</string>
    <string name="SearchBoxHint">Search</string>
    <string name="autoFillHint">AUTOFILL_TYPE_TEXT</string>
    <string name="add_comment">Add comment</string>
    <string name="select_photos">Select Photos</string>
    <string name="save_geo_location">Save Geo location</string>
    <string name="record_photo">Record photo</string>
    <string name="addPatient_Id_hint">Patient UserID:</string>
    <string name="generic_save">Save</string>
    <string name="edit_date">Edit Date</string>
    <string name="edit_time">Edit Time</string>
    <string name="edit_geolocation">Edit Geolocation</string>
    <string name="view_location">View Location</string>
    <string name="add_rem_photos">Add/Remove Photos</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="enter_username">Username</string>
    <string name="add_title">Add title</string>
    <string name="login_error_message">Username does not exist. Create a new user instead?</string>

    <!-- ProblemListActivity Layout-->
    <string name="problem_list_username">PATIENT USERNAME</string>
    <string name="problem_list_setting_button_cd">A button for editing the settings of the user.</string>


    <!-- EditUserSettingsActivity Layout-->
    <string name="EditUserSettings_Title">USER SETTINGS</string>
    <string name="EditUserSettings_Email">Email:</string>
    <string name="EditUserSettings_Username">Username:</string>
    <string name="EditUserSettings_ContactNumber">Contact Number:</string>
    <string name="EditUserSettings_UploadImageButton">Upload body reference image</string>
    <string name="EditUserSettings_SaveButton">Save Settings</string>
    <string name="EditUserSettings_CancelButton">Cancel</string>
    <string name="EditUserSettings_GetShortCodeButton">Get ShortCode</string>


    <!-- AddProblemActivity Layout-->
    <string name="add_problem_title">Add Problem</string>
    <string name="add_problem_hint_title">Title</string>
    <string name="add_problem_hint_description">Description</string>
    <string name="add_problem_hint_date">date (yyyy-MM-dd HH:mm)</string>
    <string name="add_problem_datepicker_button">Change Date</string>
    <string name="add_problem_timepicker_button">Change Time</string>


    <!-- NewUserActivity Layout-->
    <string name="NewUserActivity_SelectUserType">Please select a user type.</string>
    <string name="NewUserActivity_EnterAllFields">Please enter a User ID, Phone, and Email.</string>
    <string name="NewUserActivity_UserIdMin">User ID must be at least 8 characters.</string>
    <string name="NewUserActivity_UserIdSpaces">User ID cannot contain spaces.</string>
    <string name="NewUserActivity_PatientSaved">Patient saved!</string>
    <string name="NewUserActivity_CareProviderSaved">Care Provider saved!</string>
    <string name="editProblemSave">Save Problem</string>
    <string name="Edit_Problem">Edit Problem</string>
    <string name="Delete_problem_button">Delete Problem</string>
    <string name="NewUserActivity_userid_in_use">User ID already in use.</string>

    <!-- AddRecordActivity Layout -->
    <string name="AddRecordActivity_navigation_title">Add Record</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_geo_to_record">Map</string>
    <string name="AddRecordActivity_set_location">Set Location</string>
    <string name="AddRecordActivity_current_selected_location">Location: No Location Selected</string>
    <string name="maps_activity_select_current_location">Select Current Location</string>
    <string name="title_activity_view_record_locations">Map</string>


    <!-- editRecordActivity Layout -->
    <string name="editRecordActivity_view_photos">View Photos</string>
    <string name="editRecordActivity_activity_title">Record</string>
    <string name="editRecordActivity_save_all">Save Changes</string>
    <string name="editRecordActivity_save_comment">Save Comment</string>

    <!-- viewRecordActivity Layout -->
    <string name="viewRecordActivity_view_geolocation">View GeoLocation</string>
    <string name="viewRecordActivity_view_body_location">View Body Location</string>
    <string name="viewRecordActivity_timestamp_title">Time: </string>
    <string name="viewRecordActivity_comment_title">Comment: </string>
    <string name="viewRecordActivity_title">Title</string>

    <string name="title_activity_view_record_locations_for_user">Map</string>
    <string name="title_activity_view_single_record_location">Map</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_Reference_Photo">Select Body Location</string>
    <string name="camera_save">Save</string>
    <string name="camera_text_View">Click HADA to take photo</string>

    <!-- viewPhotosInRecord Layout -->
    <string name="viewPhotosInRecord_title">Title</string>

    <string name="generic_login">Login</string>
    <string name="generic_shortcode">ShortCode</string>
    <string name="title_activity_view_short_code">ViewShortCodeActivity</string>

    <string name="ViewShortCodeActivity_title">ShortCode</string>
    <string name="ViewShortCode_placeholder">gGgGgG</string>

    <string name="addPatientShortCode_hint">Patient ShortCode:</string>
    <string name="addPhoto">Add Photo</string>
</resources>