<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRecordActivity">

    <EditText
        android:id="@+id/recordComment"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_comment"
        android:inputType="text|textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordPhoto" />

    <Button
        android:id="@+id/selectRecordPhotos"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_photos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordComment" />

    <Switch
        android:id="@+id/geoLocationSwitch"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/save_geo_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectRecordPhotos" />

    <ImageView
        android:id="@+id/recordPhoto"
        android:layout_width="286dp"
        android:layout_height="286dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/record_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="334dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="Add Record"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>