<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRecordActivity">

    <TextView
        android:id="@+id/addProblemActivityTitle"
        android:layout_width="334dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/add_problem_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addProblemTitle"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_problem_hint_title"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProblemActivityTitle" />

    <EditText
        android:id="@+id/addProblemDate"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_problem_hint_date"
        android:inputType="date"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProblemTitle" />

    <EditText
        android:id="@+id/addProblemDescription"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_problem_hint_description"
        android:inputType=""
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProblemDate" />

    <Button
        android:id="@+id/addProblemButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/add_problem_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>