<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ViewPatientProblemsActivity">

    <ListView
        android:id="@+id/viewPatientProblemsList"
        android:layout_width="368dp"
        android:layout_height="365dp"
        app:layout_constraintBottom_toTopOf="@+id/viewPatientProblemsNewProblem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPatientProblemsDisplayUsername" />

    <EditText
        android:id="@+id/viewPatientProblemsSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewPatientProblemsNewProblem"
        app:layout_constraintEnd_toStartOf="@+id/viewPatientProblemsNewProblem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewPatientProblemsNewProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/new_problem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewPatientProblemsSearch"
        app:layout_constraintTop_toBottomOf="@+id/viewPatientProblemsList" />

    <TextView
        android:id="@+id/viewPatientProblemsDisplayUsername"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="USERNAME"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/viewPatientProblemsList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewPatientProblemsUserSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/user_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>